reverting the sticky header flicker fix until alerts are addressed

--- a/src/styles/components/_navMenu.scss
+++ b/src/styles/components/_navMenu.scss
@@ -11,7 +11,6 @@
 	@include min-screen(1025px) {
 		position: relative;
 		width: auto;
-		bottom: -42px;
 	}
 
 	@import '_search';
